used `/` in front of asset

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@
     <title>Dijual Apartment Murah</title>
     <link href="./dist/output.css" rel="stylesheet">
 
-    <script defer src="asset/script/hotel-image-slider.js"></script>
+    <script defer src="/asset/script/hotel-image-slider.js"></script>
 
     <style>
       body {
@@ -30,27 +30,27 @@
 
       <div class="flex gap-3 md:w-4/5 w-full mx-auto items-center justify-center">
         <button class="p-2 hover:bg-slate-300 hover:shadow-sm rounded-md transition-all" id="hotel-image-prev">
-          <img src="asset/svg/chevron-left-arrow.svg" width="25" height="25">
+          <img src="/asset/svg/chevron-left-arrow.svg" width="25" height="25">
         </button>
 
         <div
           class="flex items-center justify-center md:max-w-screen-sm mx-auto"
           id="hotel-image-container"
         >
-          <img class="h-80 object-contain rounded-xl shadow-md" src="asset/image/room-main-view.jpg">
-          <img class="h-80 object-contain rounded-xl shadow-md hidden" src="asset/image/room-second-view.jpg">
-          <img class="h-80 object-contain rounded-xl shadow-md hidden" src="asset/image/room-third-view.jpg">
-          <img class="h-80 object-contain rounded-xl shadow-md hidden" src="asset/image/room-fourth-view.jpg">
+          <img class="h-80 object-contain rounded-xl shadow-md" src="/asset/image/room-main-view.jpg">
+          <img class="h-80 object-contain rounded-xl shadow-md hidden" src="/asset/image/room-second-view.jpg">
+          <img class="h-80 object-contain rounded-xl shadow-md hidden" src="/asset/image/room-third-view.jpg">
+          <img class="h-80 object-contain rounded-xl shadow-md hidden" src="/asset/image/room-fourth-view.jpg">
 
-          <img class="h-80 object-contain rounded-xl shadow-md hidden" src="asset/image/bathroom-main-view.jpg">
-          <img class="h-80 object-contain rounded-xl shadow-md hidden" src="asset/image/bathroom-secondary-view.jpg">
+          <img class="h-80 object-contain rounded-xl shadow-md hidden" src="/asset/image/bathroom-main-view.jpg">
+          <img class="h-80 object-contain rounded-xl shadow-md hidden" src="/asset/image/bathroom-secondary-view.jpg">
 
-          <img class="h-80 object-contain rounded-xl shadow-md hidden" src="asset/image/outside-main-view.jpg">
-          <img class="h-80 object-contain rounded-xl shadow-md hidden" src="asset/image/outside-second-view.jpg">
+          <img class="h-80 object-contain rounded-xl shadow-md hidden" src="/asset/image/outside-main-view.jpg">
+          <img class="h-80 object-contain rounded-xl shadow-md hidden" src="/asset/image/outside-second-view.jpg">
         </div>
 
         <button class="p-2 hover:bg-slate-300 hover:shadow-sm rounded-md transition-all" id="hotel-image-next">
-          <img src="asset/svg/chevron-right-arrow.svg" width="25" height="25">
+          <img src="/asset/svg/chevron-right-arrow.svg" width="25" height="25">
         </button>
       </div>
 
@@ -69,7 +69,7 @@
           class="inline-flex items-center text-white justify-center gap-2 bg-whatsapp-500 px-6 py-3 rounded-md text-lg hover:bg-whatsapp-600 font-semibold transition-colors"
           href="https://wa.me/+6281324862016"
         >
-          <img src="asset/svg/whatsapp.svg"> Contact
+          <img src="/asset/svg/whatsapp.svg"> Contact
         </a>
       </div>
 
@@ -103,7 +103,7 @@
 
       <div class="flex items-center justify-center gap-3">
         <a class="inline-flex justify-center items-center gap-2 text-lg" href="https://github.com/rayhan-wijaya/hotel-web-page">
-          <img src="asset/svg/github.svg"> GitHub
+          <img src="/asset/svg/github.svg"> GitHub
         </a>
       </div>
 
