remove rounded class

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <div class="py-8 mx-auto max-w-2xl bg-slate-50 rounded-b-none 2xl:rounded-b-2xl shadow-lg">
+    <div class="py-8 mx-auto max-w-2xl bg-slate-50 b-none 2xl:b-2xl shadow-lg">
 
       <div id="hero-section">
         <h1 class="text-2xl text-center underline">DIJUAL APARTMENT MURAH !!</h1>
@@ -29,7 +29,7 @@
       <div class="p-5"></div>
 
       <div class="flex gap-3 md:w-4/5 w-full mx-auto items-center justify-center">
-        <button class="p-2 hover:bg-slate-300 hover:shadow-sm rounded-md transition-all" id="hotel-image-prev">
+        <button class="p-2 hover:bg-slate-300 hover:shadow-sm md transition-all" id="hotel-image-prev">
           <img src="/asset/svg/chevron-left-arrow.svg" width="25" height="25">
         </button>
 
@@ -37,19 +37,19 @@
           class="flex items-center justify-center md:max-w-screen-sm mx-auto"
           id="hotel-image-container"
         >
-          <img class="h-80 object-contain rounded-xl shadow-md" src="/asset/image/room-main-view.jpg">
-          <img class="h-80 object-contain rounded-xl shadow-md hidden" src="/asset/image/room-second-view.jpg">
-          <img class="h-80 object-contain rounded-xl shadow-md hidden" src="/asset/image/room-third-view.jpg">
-          <img class="h-80 object-contain rounded-xl shadow-md hidden" src="/asset/image/room-fourth-view.jpg">
+          <img class="h-80 object-contain xl shadow-md" src="/asset/image/room-main-view.jpg">
+          <img class="h-80 object-contain xl shadow-md hidden" src="/asset/image/room-second-view.jpg">
+          <img class="h-80 object-contain xl shadow-md hidden" src="/asset/image/room-third-view.jpg">
+          <img class="h-80 object-contain xl shadow-md hidden" src="/asset/image/room-fourth-view.jpg">
 
-          <img class="h-80 object-contain rounded-xl shadow-md hidden" src="/asset/image/bathroom-main-view.jpg">
-          <img class="h-80 object-contain rounded-xl shadow-md hidden" src="/asset/image/bathroom-secondary-view.jpg">
+          <img class="h-80 object-contain xl shadow-md hidden" src="/asset/image/bathroom-main-view.jpg">
+          <img class="h-80 object-contain xl shadow-md hidden" src="/asset/image/bathroom-secondary-view.jpg">
 
-          <img class="h-80 object-contain rounded-xl shadow-md hidden" src="/asset/image/outside-main-view.jpg">
-          <img class="h-80 object-contain rounded-xl shadow-md hidden" src="/asset/image/outside-second-view.jpg">
+          <img class="h-80 object-contain xl shadow-md hidden" src="/asset/image/outside-main-view.jpg">
+          <img class="h-80 object-contain xl shadow-md hidden" src="/asset/image/outside-second-view.jpg">
         </div>
 
-        <button class="p-2 hover:bg-slate-300 hover:shadow-sm rounded-md transition-all" id="hotel-image-next">
+        <button class="p-2 hover:bg-slate-300 hover:shadow-sm md transition-all" id="hotel-image-next">
           <img src="/asset/svg/chevron-right-arrow.svg" width="25" height="25">
         </button>
       </div>
@@ -66,7 +66,7 @@
 
       <div class="flex justify-center items-center">
         <a
-          class="inline-flex items-center text-white justify-center gap-2 bg-whatsapp-500 px-6 py-3 rounded-md text-lg hover:bg-whatsapp-600 font-semibold transition-colors"
+          class="inline-flex items-center text-white justify-center gap-2 bg-whatsapp-500 px-6 py-3 md text-lg hover:bg-whatsapp-600 font-semibold transition-colors"
           href="https://wa.me/+6281324862016"
         >
           <img src="/asset/svg/whatsapp.svg"> Contact
