--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <div class="py-8 mx-auto max-w-2xl bg-slate-50 b-none 2xl:b-2xl shadow-lg">
+    <div class="py-8 mx-auto max-w-2xl bg-slate-50 shadow-lg">
 
       <div id="hero-section">
         <h1 class="text-2xl text-center underline">DIJUAL APARTMENT MURAH !!</h1>
