--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@
 
 <html lang="id">
   <head>
-    <title>Dijual Apartment Murah</title>
+    <title>Dijual Apartment Murah - Hanya Rp 365 Juta!</title>
     <link href="./dist/output.css" rel="stylesheet">
 
     <script defer src="/asset/script/hotel-image-slider.js"></script>
