--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@
 <html lang="id">
   <head>
     <title>Dijual Apartment Murah - Hanya Rp 365 Juta!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="./dist/output.css" rel="stylesheet">
 
     <script defer src="/asset/script/hotel-image-slider.js"></script>
