dramatically reduce overall font size

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,11 +20,11 @@
     <div class="py-8 mx-auto max-w-2xl bg-slate-50 shadow-lg">
 
       <div id="hero-section">
-        <h1 class="text-2xl text-center underline">DIJUAL APARTMENT MURAH !!</h1>
+        <h1 class="text-xl text-center underline">DIJUAL APARTMENT MURAH !!</h1>
 
         <div class="p-1"></div>
 
-        <p class="text-xl text-center">Bintaro, Pondok Aren</p>
+        <p class="text-center">Bintaro, Pondok Aren</p>
       </div>
 
       <div class="p-5"></div>
@@ -58,7 +58,7 @@
       <div class="p-5"></div>
 
       <div>
-        <p class="text-center text-xl">
+        <p class="text-center text-lg">
           Hanya <span class="font-semibold">Rp. 365 Juta !!</span>
         </p>
       </div>
@@ -67,7 +67,7 @@
 
       <div class="flex justify-center items-center">
         <a
-          class="inline-flex items-center text-white justify-center gap-2 bg-whatsapp-500 px-6 py-3 md text-lg hover:bg-whatsapp-600 font-semibold transition-colors"
+          class="inline-flex items-center text-white justify-center gap-2 bg-whatsapp-500 px-6 py-3 md hover:bg-whatsapp-600 font-semibold transition-colors"
           href="https://wa.me/+6281324862016"
         >
           <img src="/asset/svg/whatsapp.svg"> Contact
@@ -77,25 +77,25 @@
       <div class="p-3"></div>
 
       <div>
-        <p class="text-center text-lg">Apartment Bintaro Icon</p>
-        <p class="text-center text-lg">Tipe Studio, 22m<sup>2</sup></p>
+        <p class="text-center">Apartment Bintaro Icon</p>
+        <p class="text-center">Tipe Studio, 22m<sup>2</sup></p>
       </div>
 
       <div class="p-2"></div>
 
       <div>
-        <p class="text-center text-lg">Jl. Jombang Raya no 26, Bintaro</p>
-        <p class="text-center text-lg">Pondok Aren, Tangerang Selatan 15229</p>
+        <p class="text-center">Jl. Jombang Raya no 26, Bintaro</p>
+        <p class="text-center">Pondok Aren, Tangerang Selatan 15229</p>
       </div>
 
       <div class="p-2"></div>
 
       <div>
-        <p class="text-center text-lg">
+        <p class="text-center">
           <a href="tel:+6281324862016">+62 813 2486 2016</a>
         </p>
 
-        <p class="text-center text-lg">
+        <p class="text-center">
           <a href="mailto:dwicahyanisusiwi@gmail.com">dwicahyanisusiwi@gmail.com</a>
         </p>
       </div>
@@ -103,7 +103,7 @@
       <div class="p-5"></div>
 
       <div class="flex items-center justify-center gap-3">
-        <a class="inline-flex justify-center items-center gap-2 text-lg" href="https://github.com/rayhan-wijaya/hotel-web-page">
+        <a class="inline-flex justify-center items-center gap-2" href="https://github.com/rayhan-wijaya/hotel-web-page">
           <img src="/asset/svg/github.svg"> GitHub
         </a>
       </div>
