set height of image on small screens

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,16 +36,16 @@
           class="flex items-center justify-center md:max-w-screen-sm mx-auto"
           id="hotel-image-container"
         >
-          <img class="h-80 object-contain" src="/asset/image/room-main-view.jpg">
-          <img class="h-80 object-contain hidden" src="/asset/image/room-second-view.jpg">
-          <img class="h-80 object-contain hidden" src="/asset/image/room-third-view.jpg">
-          <img class="h-80 object-contain hidden" src="/asset/image/room-fourth-view.jpg">
+          <img class="h-40 md:h-80 object-contain" src="/asset/image/room-main-view.jpg">
+          <img class="h-40 md:h-80 object-contain hidden" src="/asset/image/room-second-view.jpg">
+          <img class="h-40 md:h-80 object-contain hidden" src="/asset/image/room-third-view.jpg">
+          <img class="h-40 md:h-80 object-contain hidden" src="/asset/image/room-fourth-view.jpg">
 
-          <img class="h-80 object-contain hidden" src="/asset/image/bathroom-main-view.jpg">
-          <img class="h-80 object-contain hidden" src="/asset/image/bathroom-secondary-view.jpg">
+          <img class="h-40 md:h-80 object-contain hidden" src="/asset/image/bathroom-main-view.jpg">
+          <img class="h-40 md:h-80 object-contain hidden" src="/asset/image/bathroom-secondary-view.jpg">
 
-          <img class="h-80 object-contain hidden" src="/asset/image/outside-main-view.jpg">
-          <img class="h-80 object-contain hidden" src="/asset/image/outside-second-view.jpg">
+          <img class="h-40 md:h-80 object-contain hidden" src="/asset/image/outside-main-view.jpg">
+          <img class="h-40 md:h-80 object-contain hidden" src="/asset/image/outside-second-view.jpg">
         </div>
 
         <button class="p-2 hover:bg-slate-300 hover:shadow-sm md transition-all" id="hotel-image-next">
