--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@
     <div class="py-8 mx-auto max-w-2xl bg-slate-50 shadow-lg">
 
       <div id="hero-section">
-        <h1 class="text-xl text-center underline">DIJUAL APARTMENT MURAH !!</h1>
+        <h1 class="text-xl font-bold text-center underline">DIJUAL APARTMENT MURAH !!</h1>
 
         <div class="p-1"></div>
 
