moved apartment to the front of title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@
 
 <html lang="id">
   <head>
-    <title>Dijual Apartment Murah - Hanya Rp 365 Juta!</title>
+    <title>Apartment Murah Dijual! - Hanya Rp 365 Juta!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script defer src="/asset/script/hotel-image-slider.js"></script>
 
