--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@
 
     <style>
       body {
-        background-color: #475569; /* bg-slate-600 */
+        @apply bg-slate-600;
       }
     </style>
   </head>
