--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <div class="px-2 py-8 mx-auto max-w-2xl bg-slate-50 shadow-lg">
+    <div class="px-2 py-8 mx-auto max-w-2xl bg-slate-50 dark:bg-zinc-900 shadow-lg">
 
       <div id="hero-section">
         <h1 class="text-xl font-bold text-center underline">APARTEMENT <span class="whitespace-nowrap">MURAH DIJUAL !!</span></h1>
