replaced chevron-left-arrow with actual svg

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,9 @@
 
       <div class="flex gap-3 md:w-4/5 w-full mx-auto items-center justify-center">
         <button class="p-2 hover:bg-slate-300 hover:shadow-sm md transition-all" id="hotel-image-prev">
-          <img src="/asset/svg/chevron-left-arrow.svg" width="25" height="25">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5L8.25 12l7.5-7.5" />
+          </svg>
         </button>
 
         <div
