replaced chevron-right-arrow with actual svg

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,7 +51,9 @@
         </div>
 
         <button class="p-2 hover:bg-slate-300 hover:shadow-sm md transition-all" id="hotel-image-next">
-          <img src="/asset/svg/chevron-right-arrow.svg" width="25" height="25">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+          </svg>
         </button>
       </div>
 
