style additional contact information as links

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -97,11 +97,11 @@
       <div class="p-2"></div>
 
       <div>
-        <p class="text-center">
+        <p class="text-center underline text-blue-400 font-semibold">
           <a href="tel:+6281324862016">+62 813 2486 2016</a>
         </p>
 
-        <p class="text-center">
+        <p class="text-center underline text-blue-400 font-semibold">
           <a href="mailto:dwicahyanisusiwi@gmail.com">dwicahyanisusiwi@gmail.com</a>
         </p>
       </div>
