increased font weight of price

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,7 +61,7 @@
 
       <div>
         <p class="text-center text-lg">
-          Hanya <span class="font-semibold">Rp. 375 Juta !!</span>
+          Hanya <span class="font-bold">Rp. 375 Juta !!</span>
         </p>
       </div>
 
