--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@
 
     <style>
       body {
-        @apply bg-slate-600 dark:text-white;
+        @apply bg-slate-600 dark:text-white font-mono;
       }
     </style>
   </head>
