changed color of subtitle

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@
 
         <div class="p-1"></div>
 
-        <p class="text-center">Bintaro, Pondok Aren</p>
+        <p class="text-center text-zinc-400">Bintaro, Pondok Aren</p>
       </div>
 
       <div class="p-5"></div>
