--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@
 
 <html lang="id">
   <head>
-    <title>Apartment Murah Dijual! - Hanya Rp 375 Juta!</title>
+    <title>Apartemen Murah Dijual! - Hanya Rp 375 Juta!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script defer src="/asset/script/hotel-image-slider.js"></script>
 
@@ -18,7 +18,7 @@
     <div class="px-2 py-8 mx-auto max-w-2xl bg-slate-50 dark:bg-zinc-900 shadow-lg">
 
       <div id="hero-section">
-        <h1 class="text-xl font-bold text-center underline">APARTEMENT <span class="whitespace-nowrap">MURAH DIJUAL !!</span></h1>
+        <h1 class="text-xl font-bold text-center underline">APARTEMEN BINTARO <span class="whitespace-nowrap">DIJUAL MURAH !!</span></h1>
 
         <div class="p-1"></div>
 
@@ -83,7 +83,7 @@
       <div class="p-3"></div>
 
       <div>
-        <p class="text-center">Apartment Bintaro Icon</p>
+        <p class="text-center">Apartemen Bintaro Icon</p>
         <p class="text-center">Tipe Studio, 22m<sup>2</sup></p>
       </div>
 
