--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@
 
 <html lang="id">
   <head>
-    <title>Apartemen Murah Dijual! - Hanya Rp 375 Juta!</title>
+    <title>Apartemen Bintaro Dijual Murah! - Hanya Rp 375 Juta!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script defer src="/asset/script/hotel-image-slider.js"></script>
 
