--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@
     <div class="px-2 py-8 mx-auto max-w-2xl bg-slate-50 dark:bg-zinc-900 shadow-lg">
 
       <div id="hero-section">
-        <h1 class="text-xl font-bold text-center underline">APARTEMEN BINTARO <span class="whitespace-nowrap">DIJUAL MURAH !!</span></h1>
+        <h1 class="text-xl font-bold text-center underline">APARTEMEN BINTARO <span class="whitespace-nowrap">DIJUAL MURAH !!!</span></h1>
 
         <div class="p-1"></div>
 
@@ -61,7 +61,7 @@
 
       <div>
         <p class="text-center text-lg">
-          Hanya <span class="font-bold">Rp. 375 Juta !!</span>
+          Hanya <span class="font-bold">Rp. 375 Juta !!!</span>
         </p>
       </div>
 
