--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -98,7 +98,13 @@
         <p class="text-center">Pondok Aren, Tangerang Selatan 15229</p>
       </div>
 
-      <div class="p-2"></div>
+      <div class="p-3"></div>
+
+      <div>
+        <p class="text-center">atau hubungi :</p>
+      </div>
+
+      <div class="p-3"></div>
 
       <div>
         <p class="text-center underline text-blue-400 font-semibold">
