--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,11 +22,11 @@
 
         <div class="p-3"></div>
 
-        <p class="text-center text-zinc-400">Bintaro, Pondok Aren</p>
+        <p class="text-center text-zinc-500 dark:text-zinc-400">Bintaro, Pondok Aren</p>
 
         <div class="p-1"></div>
 
-        <p class="text-center text-zinc-400">Tangerang Selatan</p>
+        <p class="text-center text-zinc-500 dark:text-zinc-400">Tangerang Selatan</p>
       </div>
 
       <div class="p-5"></div>
