--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@
 <html lang="id">
   <head>
     <title>Apartemen Bintaro Dijual Murah! - Hanya Rp 365 Juta!</title>
+    <meta name="description" content="Dijual murah apartemen Bintaro Icon, hanya 365 juta. Lokasi strategis dekat British Jakarta School (BJS), Rumah Sakit Pondok Indah, Fresh Market Emerald, McDonald Emerald.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script defer src="/asset/script/hotel-image-slider.js"></script>
 
