facility and strategic locations

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -95,7 +95,19 @@
       <div class="p-2"></div>
 
       <div>
-        <p class="text-center">Jl. Jombang Raya no 26, Bintaro</p>
+        <p class="text-center">Fasilitas parkiran basement, kolam renang, gymnastics, minimarket.</p>
+      </div>
+
+      <div class="p-2"></div>
+
+      <div>
+        <p class="text-center">Lokasi strategis dekat British School Jakarta (BSJ), Rumah Sakit Pondok Indah, Fresh Market Emerald, McDonald Emerald, Akses Tol JORR II Kunciran - Soekarno Hatta - Jakarta.</p>
+      </div>
+
+      <div class="p-2"></div>
+
+      <div>
+        <p class="text-center">Alamat Jl. Jombang Raya no 26, Bintaro</p>
         <p class="text-center">Pondok Aren, Tangerang Selatan 15229</p>
       </div>
 
