created alternative text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -65,16 +65,16 @@
           class="flex items-center justify-center md:max-w-screen-sm mx-auto"
           id="hotel-image-container"
         >
-          <img class="h-52 sm:h-64 lg:h-80 object-contain" src="/asset/image/room-main-view.jpg">
-          <img class="h-52 sm:h-64 lg:h-80 object-contain hidden" src="/asset/image/room-second-view.jpg">
-          <img class="h-52 sm:h-64 lg:h-80 object-contain hidden" src="/asset/image/room-third-view.jpg">
-          <img class="h-52 sm:h-64 lg:h-80 object-contain hidden" src="/asset/image/room-fourth-view.jpg">
+          <img class="h-52 sm:h-64 lg:h-80 object-contain" src="/asset/image/room-main-view.jpg" alt="The main view of the apartment room, fitted with a window and a door leading to the balcony.">
+          <img class="h-52 sm:h-64 lg:h-80 object-contain hidden" src="/asset/image/room-second-view.jpg" alt="The secondary view of the room, slowly but surely leading to the apartment hallway. A plank floor could be seen.">
+          <img class="h-52 sm:h-64 lg:h-80 object-contain hidden" src="/asset/image/room-third-view.jpg" alt="The third view of the apartment room, now facing the door that leads to the hallway.">
+          <img class="h-52 sm:h-64 lg:h-80 object-contain hidden" src="/asset/image/room-fourth-view.jpg" alt="The fourth and final view of the room, focusing on the other door which leads to the balcony.">
 
-          <img class="h-52 sm:h-64 lg:h-80 object-contain hidden" src="/asset/image/bathroom-main-view.jpg">
-          <img class="h-52 sm:h-64 lg:h-80 object-contain hidden" src="/asset/image/bathroom-secondary-view.jpg">
+          <img class="h-52 sm:h-64 lg:h-80 object-contain hidden" src="/asset/image/bathroom-main-view.jpg" alt="The bathroom of the apartment space, which contains a toilet, a sink, and finally a showering area.">
+          <img class="h-52 sm:h-64 lg:h-80 object-contain hidden" src="/asset/image/bathroom-secondary-view.jpg" alt="The second view of the bathroom, focusing the shower area">
 
-          <img class="h-52 sm:h-64 lg:h-80 object-contain hidden" src="/asset/image/outside-main-view.jpg">
-          <img class="h-52 sm:h-64 lg:h-80 object-contain hidden" src="/asset/image/outside-second-view.jpg">
+          <img class="h-52 sm:h-64 lg:h-80 object-contain hidden" src="/asset/image/outside-main-view.jpg" alt="Now in the balcony, dense with greenery and residential areas. In the far distance, buildings could be seen.">
+          <img class="h-52 sm:h-64 lg:h-80 object-contain hidden" src="/asset/image/outside-second-view.jpg" alt="The second view of the balcony, now focusing on the nearby residential areas, just across the apartment.">
         </div>
 
         <button class="p-2 hover:bg-slate-300 hover:shadow-sm md transition-all" id="hotel-image-next">
