added aria-label to next/prev button

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,7 +55,7 @@
       <div class="p-5"></div>
 
       <div class="flex gap-3 md:w-4/5 w-full mx-auto items-center justify-center">
-        <button class="p-2 hover:bg-slate-300 hover:shadow-sm md transition-all" id="hotel-image-prev">
+        <button class="p-2 hover:bg-slate-300 hover:shadow-sm md transition-all" id="hotel-image-prev" aria-label="Gambar sebelumnya">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5L8.25 12l7.5-7.5" />
           </svg>
@@ -77,7 +77,7 @@
           <img class="h-52 sm:h-64 lg:h-80 object-contain hidden" src="/asset/image/outside-second-view.jpg" alt="Pemandangan kedua dari balkon, sekarang memfokuskan pada daerah perumahan di seberang apartemen.">
         </div>
 
-        <button class="p-2 hover:bg-slate-300 hover:shadow-sm md transition-all" id="hotel-image-next">
+        <button class="p-2 hover:bg-slate-300 hover:shadow-sm md transition-all" id="hotel-image-next" aria-label="Gambar selanjutnya">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
           </svg>
