--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,8 @@
   <head>
     <title>Apartemen Bintaro Dijual Murah! - Hanya Rp 365 Juta!</title>
 
+    <meta charset="UTF-8">
+
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="icon" sizes="16x16 32x32 64x64" href="/favicon.ico">
     <link rel="icon" type="image/png" sizes="196x196" href="/favicon-192.png">
