moved meta tags to the top

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,8 @@
     <title>Apartemen Bintaro Dijual Murah! - Hanya Rp 365 Juta!</title>
 
     <meta charset="UTF-8">
+    <meta name="description" content="Dijual murah apartemen Bintaro Icon, hanya 365 juta. Lokasi strategis dekat British Jakarta School (BJS), Rumah Sakit Pondok Indah, Fresh Market Emerald, McDonald Emerald.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="icon" sizes="16x16 32x32 64x64" href="/favicon.ico">
@@ -28,8 +30,6 @@
     <meta name="msapplication-TileImage" content="/favicon-144.png">
     <meta name="msapplication-config" content="/browserconfig.xml">
 
-    <meta name="description" content="Dijual murah apartemen Bintaro Icon, hanya 365 juta. Lokasi strategis dekat British Jakarta School (BJS), Rumah Sakit Pondok Indah, Fresh Market Emerald, McDonald Emerald.">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script defer src="/asset/script/hotel-image-slider.js"></script>
 
     <style>
@@ -147,6 +147,8 @@
         <p class="text-center underline text-blue-400 font-semibold">
           <a href="tel:+6281324862016">+62 813 2486 2016</a>
         </p>
+
+        <div class="p-1"></div>
 
         <p class="text-center underline text-blue-400 font-semibold">
           <a href="mailto:dwicahyanisusiwi@gmail.com">dwicahyanisusiwi@gmail.com</a>
