--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@
 
 <html lang="id">
   <head>
-    <title>Apartemen Bintaro Dijual Murah! - Hanya Rp 365 Juta!</title>
+    <title>Hanya Rp 365 Juta! - Apartemen Bintaro Dijual Murah!</title>
 
     <meta charset="UTF-8">
     <meta name="description" content="Dijual murah apartemen Bintaro Icon, hanya 365 juta. Lokasi strategis dekat British Jakarta School (BJS), Rumah Sakit Pondok Indah, Fresh Market Emerald, McDonald Emerald.">
