--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@
     <title>Hanya Rp 365 Juta! - Apartemen Bintaro Icon Dijual Murah!</title>
 
     <meta charset="UTF-8">
-    <meta name="description" content="Dijual murah apartemen Bintaro Icon, hanya 365 juta. Lokasi strategis dekat British Jakarta School (BJS), Rumah Sakit Pondok Indah, Fresh Market Emerald, McDonald Emerald.">
+    <meta name="description" content="Hanya 365 Juta! Apartemen Bintaro Icon dijual murah! Lokasi strategis dekat British Jakarta School (BJS), Rumah Sakit Pondok Indah, Fresh Market Emerald, McDonald Emerald.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" href="/favicon.ico">
