--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,7 +43,7 @@
     <div class="px-4 sm:px-16 py-8 mx-auto max-w-2xl bg-slate-50 dark:bg-zinc-900 shadow-lg">
 
       <div id="hero-section">
-        <h1 class="text-xl font-bold text-center underline">APARTEMEN BINTARO ICON <span class="whitespace-nowrap">DIJUAL MURAH !!!</span></h1>
+        <h1 class="text-xl font-bold text-center underline">APARTEMEN BINTARO ICON <span class="whitespace-nowrap">MURAH !!!</span></h1>
 
         <div class="p-3"></div>
 
